<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_centerInParent="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView

            android:id="@+id/mainImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#ecf0f1"
            tools:src="@drawable/img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/proName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/eidtor_mblue"
                android:textSize="18sp"
                tools:text="@string/product_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/quantity_stock"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/eidtor_mblue" />

                <TextView
                    android:id="@+id/quant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/editor_q"
                    tools:text="@string/two" />
            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:text="@string/rupee"
                    android:textColor="@color/editor_q"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/pricy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    tools:text="@string/two" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center">

                    <Button
                        android:id="@+id/sale_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_style"
                        android:focusable="false"
                        android:text="@string/sale"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>